tests/ui/macros/macro-path-prelude-fail-2.rs
mod m {
    fn check() {
        Result::Ok!(); //~ ERROR cannot find
    }
}

fn main() {}
